added "close" button to ForgotPassword.html that appears after successful email sending

--- a/src/main/resources/static/views/main/ForgotPassword.html
+++ b/src/main/resources/static/views/main/ForgotPassword.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
             <input type="submit" class="btn btn-success btn-block" ng-show="!submitted" value="Send reset link"/>
+            <button class="btn btn-success btn-block" ng-show="message" ng-click="closeFpModal()">Close</button>
         </form>
     </div>
 </div>
