modal windows work, refactor investment controller, delete application properties

--- a/src/main/resources/static/views/investment/add_investment.html
+++ b/src/main/resources/static/views/investment/add_investment.html
@@ -1,9 +1,9 @@
 <div ng-controller="InvestmentController">
 	<div class="modal-header">
 		<!--todo close button-->
-		<!--<button class="close" type="button" ng-click="closeInvestmentModal()">
+		<button class="close" type="button" ng-click="closeInvestmentModal()">
 			<span class="fa fa-close"></span>
-		</button>-->
+		</button>
 		<h3 class="modaltitle">Add an investment</h3>
 	</div>
 	<div class="modal-body">
