--- a/src/main/resources/static/views/project/EditForm.html
+++ b/src/main/resources/static/views/project/EditForm.html
@@ -5,7 +5,7 @@
             <label for="name" class="col-xs-3 control-label">Project name:</label>
             <div class="col-xs-9">
                 <input type="text" placeholder="Project name" ng-model="project.desc.name" class="form-control input-md"
-                       id="name">
+                       id="name" required>
             </div>
         </div>
         <div class="form-group">
@@ -25,13 +25,13 @@
         <div class="form-group">
             <label for="cost" class="col-xs-3 control-label">Cost:</label>
             <div class="col-xs-9">
-                <input type="text" ng-model="project.desc.cost" class="form-control input-md" id="cost"/>
+                <input type="number" min="0" ng-model="project.desc.cost" class="form-control input-md" id="cost"/>
             </div>
         </div>
         <div class="form-group">
             <label for="minInvestment" class="col-xs-3 control-label">Minimum investment:</label>
             <div class="col-xs-9">
-                <input type="text" ng-model="project.desc.minInvestment" class="form-control input-md" id="minInvestment"/>
+                <input type="number" min="0" ng-model="project.desc.minInvestment" class="form-control input-md" id="minInvestment"/>
             </div>
         </div>
         <div class="form-group">
