--- a/src/main/resources/static/views/investment/ProjectInvestments.html
+++ b/src/main/resources/static/views/investment/ProjectInvestments.html
@@ -12,10 +12,7 @@
 					</a>
 				</div>
 				<div class="col-xs-5 col-sm-4 col-md-3">
-					{{investment.dateOfInvestment.year}}
-					{{investment.dateOfInvestment.month}}
-					{{investment.dateOfInvestment.dayOfMonth}},
-					{{investment.dateOfInvestment.hour}}:{{investment.dateOfInvestment.minute}}
+					{{investment.dateOfInvestment}}
 				</div>
 				<div class="col-xs-3 col-sm-2">
 					{{investment.sum | currency}}
