--- a/src/main/resources/static/views/investment/UserInvestments.html
+++ b/src/main/resources/static/views/investment/UserInvestments.html
@@ -9,15 +9,11 @@
 				<div class="row">
 					<div class="col-xs-8 col-sm-7 col-md-4 col-lg-5">
 						<a href="#">
-							{{ investment.project.desc.name}}
+							{{investment.project.desc.name}}
 						</a>
 					</div>
 					<div class="col-md-3 hidden-sm hidden-xs">
-
-						{{investment.dateOfInvestment.year}}
-						{{investment.dateOfInvestment.month}}
-						{{investment.dateOfInvestment.dayOfMonth}},
-						{{investment.dateOfInvestment.hour}}:{{investment.dateOfInvestment.minute}}
+						{{investment.dateOfInvestment}}
 					</div>
 					<div class="col-xs-3 col-sm-2">
 						<a href="#">
