activate email service, add links on projects in investments

--- a/src/main/resources/static/views/investment/Investments.html
+++ b/src/main/resources/static/views/investment/Investments.html
@@ -27,7 +27,7 @@
 						</a>
 					</div>
 					<div class="col-xs-4 col-sm-4 col-md-3">
-						<a href="#">
+						<a href="#!/project/{{investment.project.id}}">
 							{{ investment.project.desc.name}}
 						</a>
 					</div>
