--- a/src/main/resources/static/views/investment/UserInvestments.html
+++ b/src/main/resources/static/views/investment/UserInvestments.html
@@ -8,7 +8,7 @@
 			    data-color="">
 				<div class="row">
 					<div class="col-xs-8 col-sm-7 col-md-4 col-lg-5">
-						<a href="#">
+						<a href="#!/project/{{investment.project.id}}">
 							{{investment.project.desc.name}}
 						</a>
 					</div>
