--- a/src/main/resources/static/views/project/ProjectPage.html
+++ b/src/main/resources/static/views/project/ProjectPage.html
@@ -4,7 +4,7 @@
 		<div class="col-xs-10 col-md-7 col-xs-offset-1 col-lg-8">
 			<!--Project name and goal-->
 			<div class="item">
-				<a ng-if="authenticated" class="btn btn-edit pull-right" href="#!project/{{project.id}}/edit">
+				<a ng-if="authenticated && currentUser.id === project.owner.id" class="btn btn-edit pull-right" href="#!project/{{project.id}}/edit">
 					<span class="glyphicon glyphicon-pencil"></span></a>
 				<div class="thumbnail">
 					<div ng-if="project.desc.image!=null">
@@ -45,7 +45,7 @@
 					<div class="caption">
 						<h3>Other</h3>
 						<hr>
-						<p></p>
+						<p>{{project.desc.other}}</p>
 					</div>
 				</div>
 			</div>
