--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -211,7 +211,7 @@
 									       class="form-control input-md input-text">
 								</div>
 								<div class="cta-button">
-									<button type="submit" class="btn btn-lg btn-block btn-edit">Add Project</button>
+									<button type="button" class="btn btn-lg btn-block btn-edit" ng-click="openPage('/project/new')">Add Project</button>
 								</div>
 							</div>
 						</fieldset>
