--- a/src/main/resources/static/views/project/EditForm.html
+++ b/src/main/resources/static/views/project/EditForm.html
@@ -54,8 +54,8 @@
         <div class="form-group">
             <label for="category" class="col-xs-3 control-label">Category:</label>
             <div class="col-xs-9" ng-controller="CategoryController">
-                <select name="category" id="category" ng-model="project.category.name">
-                    <option ng-repeat="cat in categories" value="{{cat.name}}" {{project.category.name === cat.name ? 'selected' : ''>{{cat.name}}</option>
+                <select name="category" id="category" ng-model="project.category"
+                        ng-options="cat.name for cat in categories track by cat.id">
                 </select>
             </div>
         </div>
