--- a/src/main/resources/static/views/project/EditProject.html
+++ b/src/main/resources/static/views/project/EditProject.html
@@ -9,7 +9,7 @@
                     <h4>{{!project.id ? 'Create' :'Edit'}} project</h4>
                 </div>
                 <div ng-show="error">
-                    <div class="alert alert-danger">ERROR</div>
+                    <div class="alert alert-danger">There was an error: {{error}}</div>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal" role="form" ng-submit="submit()" id="projectForm">
