Project category fix for new project

--- a/src/main/resources/static/views/main/About.html
+++ b/src/main/resources/static/views/main/About.html
@@ -26,7 +26,7 @@
             <img class="img-circle img-responsive img-center" src="img/DenysA.png" alt="">
             <h3>Denys Azhymov
             </h3>
-            <p>Sole of our company</p>
+            <p>Soul of our company</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
             <img class="img-circle img-responsive img-center" src="img/DenysS.png" alt="">
