--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -194,11 +194,11 @@
 		<div class="bs-calltoaction bs-calltoaction-success">
 			<div class="row">
 				<div class="col-md-9 cta-contents">
-					<a href="#!/projects"><h1 class="cta-title">Projects</h1></a>
+					<a href="#!/projects/my"><h1 class="cta-title">Projects</h1></a>
 					<div class="cta-desc">
-						<p><a href="#!/projects">My Projects</a></p>
-						<p>Describe the action here.</p>
-						<p>Describe the action here.</p>
+						<p><a href="#!/projects/my">My Projects</a></p>
+						<p>Click to display all your projects.</p>
+						<p>Use the "Add project" button to add a new project.</p>
 					</div>
 				</div>
 				<div class="col-md-3 form-field">
