--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -57,13 +57,11 @@
                                                                                     aria-hidden="true"
                                                                                     style="margin-right: 5px"></span>My
                                                             account</a></li>
-                                                        <li><a href="#!/projects"><span class="fa fa-star"
+                                                        <li><a href="#!/projects/my"><span class="fa fa-star"
                                                                                         aria-hidden="true"
                                                                                         style="margin-right: 5px"></span>Favourites</a>
                                                         </li>
-                                                        <li><a href="#!/help"><span class="fa fa-question-circle-o"
-                                                                                    style="margin-right: 5px"></span>Help</a>
-                                                        </li>
+
                                                         <li><a href="" class="btn btn-success btn-md"
                                                                style="margin-top: 5px" ng-click="logout()"><span
                                                                 class="fa fa-sign-out"
