--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -54,7 +54,7 @@
 		</div>
 	</div>
 </div>
-<div class="container">
+<div class="container" ng-controller="ProjectController">
 	<div class="row">
 		<div class="col-xs-12">
 			<a href ng-click="flag=!flag;" class="btn btn-success btn-block">Favourites
@@ -65,121 +65,33 @@
 					<div class="panel-info">
 						<div class="panel-body">
 							<div class="row">
+								<div ng-repeat="project in projects | limitTo: 3">
 								<div class="container col-md-4 col-xs-12">
 									<div class="card">
-										<a href="#"><img ng-src="https://goo.gl/bLja0p"
+										<a href="#!/project/{{project.id}}" ng-if="project.desc.image"><img ng-src="data:image/png;base64,{{project.desc.image}}"
 										                 class="card-img-top img-responsive"
 										                 alt=""></a>
 										<div class="card-block">
-											<a href="#"><h4 class="card-title">The NOMATIC Backpack and Travel Pack</h4>
+											<a href="#!/project/{{project.id}}"><h4 class="card-title">{{project.desc.name}}</h4>
 											</a>
 											<div class="card-text">
-												<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-													eiusmod
-													tempor
-													incididunt ut labore et
-													dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-													exercitation
-													ullamco
-													laboris nisi ut aliquip
-													ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-													voluptate
-													velit
-													esse cillum dolore eu
-													fugiat nulla pariatur.
-												</div>
+												<div>{{project.desc.description}}</div>
 											</div>
 										</div>
 										<div class="card-footer">
 											<div class="row">
 												<div class="col-xs-6">
 													<div>min</div>
-													<div><span class="fa fa-dollar"></span>100000</div>
+													<div><span class="fa fa-dollar"></span>{{project.desc.minInvestment}}</div>
 												</div>
 												<div class="col-xs-6">
-													<div class="right-box">Still needed</div>
-													<div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+													<div class="right-box">Total needed</div>
+													<div class="right-box"><span class="fa fa-dollar"></span>{{project.desc.cost}}</div>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="container col-md-4 col-xs-12">
-									<div class="card">
-										<a href="#"><img ng-src="https://goo.gl/e7PZpL"
-										                 class="card-img-top img-responsive" alt="ProjectPhoto"></a>
-										<div class="card-block">
-											<a href="#"><h4 class="card-title">Artificial Intelligence A-Z™: Learn How
-												To
-												Build An AI</h4></a>
-											<div class="card-text">
-												<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-													eiusmod
-													tempor
-													incididunt ut labore et
-													dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-													exercitation
-													ullamco
-													laboris nisi ut aliquip
-													ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-													voluptate
-													velit
-													esse cillum dolore eu
-													fugiat nulla pariatur.
-												</div>
-											</div>
-										</div>
-										<div class="card-footer">
-											<div class="row">
-												<div class="col-xs-6">
-													<div>min</div>
-													<div><span class="fa fa-dollar"></span>100000</div>
-												</div>
-												<div class="col-xs-6">
-													<div class="right-box">Still needed</div>
-													<div class="right-box"><span class="fa fa-dollar"></span>9999</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="container col-md-4 col-xs-12">
-									<div class="card">
-										<a href="#"><img ng-src="https://goo.gl/bLja0p"
-										                 class="card-img-top img-responsive" alt=""></a>
-										<div class="card-block">
-											<a href="#"><h4 class="card-title">The NOMATIC Backpack and Travel Pack</h4>
-											</a>
-											<div class="card-text">
-												<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-													eiusmod
-													tempor
-													incididunt ut labore et
-													dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-													exercitation
-													ullamco
-													laboris nisi ut aliquip
-													ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-													voluptate
-													velit
-													esse cillum dolore eu
-													fugiat nulla pariatur.
-												</div>
-											</div>
-										</div>
-										<div class="card-footer">
-											<div class="row">
-												<div class="col-xs-6">
-													<div>min</div>
-													<div><span class="fa fa-dollar"></span>100000</div>
-												</div>
-												<div class="col-xs-6">
-													<div class="right-box">Still needed</div>
-													<div class="right-box"><span class="fa fa-dollar"></span>9999</div>
-												</div>
-											</div>
-										</div>
-									</div>
 								</div>
 							</div>
 						</div>
