--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -12,14 +12,14 @@ clear: both;
 height: 20px;
 }
 
-a:link, a:visited {
+/*a:link, a:visited {
 color: #77BACE;
 text-decoration: none;
 }
 
 a:hover {
 text-decoration: underline;
-}
+}*/
 
 
 /* Header */
