--- a/src/main/resources/static/views/investment/UserInvestments.html
+++ b/src/main/resources/static/views/investment/UserInvestments.html
@@ -13,7 +13,7 @@
 						</a>
 					</div>
 					<div class="col-md-3 hidden-sm hidden-xs">
-						{{investment.dateOfInvestment | asDate | date}}
+						{{investment.dateOfInvestment | asDate | date : "short"}}
 					</div>
 					<div class="col-xs-3 col-sm-2">
 						<a href="#">
