--- a/src/main/resources/static/views/project/ProjectPage.html
+++ b/src/main/resources/static/views/project/ProjectPage.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProjectController" ng-init="getProject()">
+<div ng-controller="ProjectController">
 	<div class="row">
 		<!-- /PRICE ITEM -->
 		<div class="col-xs-10 col-md-7 col-xs-offset-1 col-lg-8">
