--- a/src/main/resources/static/views/main/Main.html
+++ b/src/main/resources/static/views/main/Main.html
@@ -37,214 +37,45 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container" ng-controller="ProjectController">
     <div class="row">
         <div class="container">
             <ul class="nav nav-tabs">
-                <li class="active"><a href="#"><h3>Projects</h3></a></li>
+                <li class="active"><a href="#!/projects"><h3>Projects</h3></a></li>
             </ul>
         </div>
     </div>
     <div class="row">
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#!/project"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#!/project"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><span class="fa fa-dollar"></span>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
+        <div ng-repeat="project in projects | limitTo: 6">
+            <div class="clearfix" ng-if="$index % 3 == 0"></div>
+            <div class="container col-md-4 col-xs-12">
+                <div class="item">
+                    <div class="thumbnail">
+                        <div class="caption centered">
+                            <a href="#!/project/{{project.id}}"><h3>{{project.desc.name}}</h3></a>
+                        </div>
+                        <a href="#!/project/{{project.id}}" ng-if="project.desc.image"><img ng-src="data:image/png;base64,{{project.desc.image}}" alt="" class="img-responsive"></a>
+                        <div class="caption">
+                            <p>{{project.desc.description}}</p>
+                            <hr>
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <div>min</div>
+                                    <div><em class="fa fa-dollar"></em>{{project.desc.minInvestment}}</div>
+                                </div>
+                                <div class="col-xs-6">
+                                    <div class="right-box">Total needed</div>
+                                    <div class="right-box"><em class="fa fa-dollar"></em>{{project.desc.cost}}</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#!/project"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#!/project"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><span class="fa fa-dollar"></span>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#!/project"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#!/project"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><span class="fa fa-dollar"></span>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#!/project"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#!/project"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><span class="fa fa-dollar"></span>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </div>
 </div>
-<div class="container">
-    <div class="row">
-        <div class="container">
-            <ul class="nav nav-tabs">
-                <li class="active"><a href="#"><h3>Events</h3></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="row">
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#!/event"><h3>Event name</h3></a>
-                    </div>
-                    <a href="#!/event"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#!/event"><h3>Event name</h3></a>
-                    </div>
-                    <a href="#!/event"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#!/event"><h3>Event name</h3></a>
-                    </div>
-                    <a href="#!/event"><img ng-src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <div ng-include="'views/main/Footer.html'"></div>
