--- a/src/main/resources/static/views/project/EditProject.html
+++ b/src/main/resources/static/views/project/EditProject.html
@@ -1,21 +1,22 @@
+
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
             <div class="panel panel-success" style="border: 0">
                 <div class="panel-heading" style="background: #f5f5f5;border: 0">
-                    <a class="btn btn-edit pull-right" href="#!/user/{{currentUser.id}}">
+                    <a class="btn btn-edit pull-right" href="#!/project/{{project.id}}">
                         <span class="glyphicon glyphicon-pencil"></span></a>
-                    <h4>User Profile</h4>
+                    <h4>{{!project.id ? 'Create' :'Edit'}} project</h4>
                 </div>
                 <div ng-show="error">
-                    <div class="alert alert-danger">ERROR</div>
+                    <div class="alert alert-danger">There was an error: {{error}}</div>
                 </div>
                 <div class="panel-body">
-                    <form class="form-horizontal" role="form" ng-submit="submit()" id="userForm">
+                    <form class="form-horizontal" role="form" ng-submit="submit()" id="projectForm">
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
                                 <div class="cropArea">
-                                    <img-crop image="myImage" result-image="myCroppedImage" area-type="rectangle"></img-crop>
+                                    <img-crop image="projectImage" result-image="projectCroppedImage" area-type="rectangle"></img-crop>
                                 </div>
                                 <div>
                                     <label class="btn btn-default btn-file">
@@ -28,7 +29,7 @@
                                 <div class="panel-info">
                                     <div class="panel-body">
                                         <div class="form-horizontal">
-                                            <div ng-include="'views/user/EditForm.html'"></div>
+                                            <div ng-include="'views/project/EditForm.html'"></div>
                                         </div>
                                     </div>
                                 </div>
