--- a/src/main/resources/static/views/project/ProjectPage.html
+++ b/src/main/resources/static/views/project/ProjectPage.html
@@ -1,15 +1,19 @@
-<div ng-controller="ProjectController" ng-init="getProject()">
+<div ng-controller="ProjectController">
 	<div class="row">
 		<!-- /PRICE ITEM -->
 		<div class="col-xs-10 col-md-7 col-xs-offset-1 col-lg-8">
 			<!--Project name and goal-->
 			<div class="item">
+				<a ng-if="currentUser.id === project.owner.id && project.dtoInvestments.length === 0" class="btn btn-edit pull-right" ng-click="deleteProject()">
+					<span class="glyphicon glyphicon-trash"></span></a>
+				<a ng-if="currentUser.id === project.owner.id" class="btn btn-edit pull-right" href="#!project/{{project.id}}/edit">
+					<span class="glyphicon glyphicon-pencil"></span></a>
 				<div class="thumbnail">
 					<div ng-if="project.desc.image!=null">
-						<img src="http://placehold.it/800x450" alt="" class="centered img-responsive">
+						<img ng-src="data:image/png;base64,{{project.desc.image}}" alt="{{project.desc.name}}" class="centered img-responsive">
 					</div>
 					<div ng-if="project.desc.image==null">
-						<img src="http://placehold.it/800x450" alt="" class="centered img-responsive">
+						<img src="http://placehold.it/800x450" alt="No image available" class="centered img-responsive">
 					</div>
 					<div class="caption">
 						<h3>{{project.desc.name}}</h3>
@@ -43,7 +47,7 @@
 					<div class="caption">
 						<h3>Other</h3>
 						<hr>
-						<p></p>
+						<p>{{project.desc.other}}</p>
 					</div>
 				</div>
 			</div>
