--- a/src/main/resources/static/views/project/Projects.html
+++ b/src/main/resources/static/views/project/Projects.html
@@ -1,302 +1,34 @@
 <div class="container">
     <div class="row">
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
+        <div ng-repeat="project in projects">
+            <div class="clearfix" ng-if="$index % 3 == 0"></div>
+            <div class="container col-md-4 col-xs-12">
+                <div class="item">
+                    <div class="thumbnail">
+                        <div class="caption centered">
+                            <a href="#!/project/{{project.id}}"><h3>{{project.desc.name}}</h3></a>
+                        </div>
+                        <a href="#!/project/{{project.id}}" ng-if="project.desc.image"><img ng-src="data:image/png;base64,{{project.desc.image}}" alt="" class="img-responsive"></a>
+                        <div class="caption">
+                            <p>{{project.desc.description}}</p>
+                            <hr>
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <div>min</div>
+                                    <div><em class="fa fa-dollar"></em>{{project.desc.minInvestment}}</div>
+                                </div>
+                                <div class="col-xs-6">
+                                    <div class="right-box">Total needed</div>
+                                    <div class="right-box"><em class="fa fa-dollar"></em>{{project.desc.cost}}</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
                     </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="container col-md-4 col-xs-12">
-            <div class="item">
-                <div class="thumbnail">
-                    <div class="caption centered">
-                        <a href="#"><h3>Project name</h3></a>
-                    </div>
-                    <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur.</p>
-                        <hr>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div>min</div>
-                                <div><em class="fa fa-dollar"></em>100000</div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="right-box">Still needed</div>
-                                <div class="right-box"><em class="fa fa-dollar"></em>9999</div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container">
-    <div class="row centered">
-        <ul class="pagination">
-            <li class="disabled"><a href="#">«</a></li>
-            <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">»</a></li>
-        </ul>
-    </div>
-</div>
+
 <div ng-include="'views/main/Footer.html'"></div>
