remove List<DtoInvestment> from DtoUserProfile and DtoProject

--- a/src/main/resources/static/views/investment/ProjectInvestments.html
+++ b/src/main/resources/static/views/investment/ProjectInvestments.html
@@ -1,7 +1,7 @@
 <div ng-controller="ProjectController">
 	<h3>Investments</h3>
 	<div style="max-height: 200px; overflow: auto;">
-		<ul ng-repeat="investment in project.dtoInvestments"
+		<ul ng-repeat="investment in projectInvestments"
 		    class="list-group checked-list-box">
 			<li class="list-group-item {{investment.paid ? 'list-group-item-success' :
         (investment.verified ? 'list-group-item-warning' : 'list-group-item-danger')}}"
