--- a/src/main/resources/static/views/project/ProjectPage.html
+++ b/src/main/resources/static/views/project/ProjectPage.html
@@ -4,7 +4,7 @@
 		<div class="col-xs-10 col-md-7 col-xs-offset-1 col-lg-8">
 			<!--Project name and goal-->
 			<div class="item">
-				<a ng-if="currentUser.id === project.owner.id && project.dtoInvestments.length === 0" class="btn btn-edit pull-right" ng-click="deleteProject()">
+				<a ng-if="currentUser.id === project.owner.id && projectInvestments.length === 0" class="btn btn-edit pull-right" ng-click="deleteProject()">
 					<span class="glyphicon glyphicon-trash"></span></a>
 				<a ng-if="currentUser.id === project.owner.id" class="btn btn-edit pull-right" href="#!project/{{project.id}}/edit">
 					<span class="glyphicon glyphicon-pencil"></span></a>
@@ -72,7 +72,7 @@
 						</div>
 						<div class="panel-body text-center">
 							<h4>Total project investment {{project.desc.cost | currency}}</h4>
-							<div class="progress" ng-init="investedAmount(project)">
+							<div class="progress">
 								<div class="progress-bar progress-bar-info"
 								     style="{{invProgressWithWidth}}"></div>
 							</div>
