--- a/src/main/resources/static/views/investment/UserInvestments.html
+++ b/src/main/resources/static/views/investment/UserInvestments.html
@@ -1,7 +1,7 @@
-<div class="cta-contents" ng-controller="InvestmentController">
+<div class="cta-contents" ng-controller="InvestmentController" ng-init="getUserInvestments()">
 	<h1 class="cta-title">Investments</h1>
 	<div class="cta-desc" style="max-height: 200px; overflow: auto;">
-		<ul ng-repeat="investment in currentUser.dtoInvestments"
+		<ul ng-repeat="investment in userInvestments"
 		    class="list-group checked-list-box">
 			<li class="list-group-item {{investment.paid ? 'list-group-item-success' :
                         (investment.verified ? 'list-group-item-warning' : 'list-group-item-danger')}}"
