remove List<DtoInvestment> from DtoUserProfile and DtoProject

--- a/src/main/resources/static/views/investment/UserInvestments.html
+++ b/src/main/resources/static/views/investment/UserInvestments.html
@@ -27,7 +27,7 @@
                         </span>
 					</div>
 					<div class="{{investment.paid ? 'hidden' : 'col-xs-1 left'}}">
-						<button ng-click="deleteInvestment(investment.id)" class="btn btn-xs btn-danger">
+						<button ng-click="deleteUserInvestment(investment.id)" class="btn btn-xs btn-danger">
 							<span class="glyphicon glyphicon-trash"></span>
 						</button>
 					</div>
