--- a/src/main/resources/static/views/investment/Investments.html
+++ b/src/main/resources/static/views/investment/Investments.html
@@ -32,7 +32,7 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-lg-2 hidden-sm hidden-xs">
-						{{investment.dateOfInvestment | date}}
+						{{investment.dateOfInvestment | asDate | date : "short"}}
 					</div>
 					<div class="col-xs-3 col-sm-2">
 						{{investment.sum | currency}}
