remove List<DtoInvestment> from DtoUserProfile and DtoProject

--- a/src/main/resources/static/views/investment/ApproveCreateInvestmentModal.html
+++ b/src/main/resources/static/views/investment/ApproveCreateInvestmentModal.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProjectController" ng-init="">
+<div>
 	<div class="modal-header">
 		<button class="close" type="button" ng-click="closeApproveModal()">
 			<span class="fa fa-close"></span>
