--- a/src/main/resources/static/views/investment/add_investment.html
+++ b/src/main/resources/static/views/investment/add_investment.html
@@ -1,4 +1,4 @@
-<div ng-controller="ProjectController">
+<div>
 	<form class="form" role="form" ng-submit="createInvestment()">
 		<div class="modal-header">
 			<!--todo close button-->
